# numa

./: Cargo.toml  README.md  pyproject.toml
src/grok/: many_inputs.rs  many_outputs.rs  pred_on_preds.rs  quick_numpy.rs  simple_net.rs
src/grok/ch3/: many_inputs_many_outputs.rs  many_inputs_np.rs  pred_on_preds_np.rs
src/grok/ch4/: compare.rs  dir_and_amount.rs  grad_descent.rs  hot_and_cold.rs  hot_and_cold_iter.rs  memo.rs
src/grok/ch5/: grad_multi_input.rs  grad_multi_multi.rs  grad_multi_output.rs
